OLD/pypilot-errors-android.txt
MacOS

[ 62%] Built target pypilot-i18n
[ 64%] Building CXX object CMakeFiles/pypilot_pi.dir/src/pypilot_pi.cpp.o
[ 66%] Building CXX object CMakeFiles/pypilot_pi.dir/src/pypilot_client.cpp.o
/Users/distiller/project/src/pypilot_pi.cpp:626:25: error: use of undeclared identifier 'std_path'; did you mean 'stdPath'?
    wxString oldPath = (std_path.GetUserConfigDir() + s + _T("plugins") + s + _T("weatherfax"));
                        ^~~~~~~~
                        stdPath
/Users/distiller/project/src/pypilot_pi.cpp:614:14: note: 'stdPath' declared here
    wxString stdPath  = *GetpPrivateApplicationDataLocation();
             ^
/Users/distiller/project/src/pypilot_pi.cpp:626:34: error: no member named 'GetUserConfigDir' in 'wxString'
    wxString oldPath = (std_path.GetUserConfigDir() + s + _T("plugins") + s + _T("weatherfax"));
                        ~~~~~~~~ ^
2 errors generated.
make[2]: *** [CMakeFiles/pypilot_pi.dir/src/pypilot_pi.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/pypilot_pi.dir/all] Error 2
make: *** [all] Error 2

Exited with code exit status 2



=====


Android

/opt/android/android-ndk-r21e/toolchains/llvm/prebuilt/linux-x86_64/bin/../lib/gcc/aarch64-linux-android/4.9.x/../../../../aarch64-linux-android/bin/ld: cannot find -lGL_static
clang++: error: linker command failed with exit code 1 (use -v to see invocation)
make[2]: *** [CMakeFiles/pypilot_pi.dir/build.make:318: libpypilot_pi.so] Error 1
make[2]: Leaving directory '/home/circleci/project/build'
make[1]: *** [CMakeFiles/Makefile2:108: CMakeFiles/pypilot_pi.dir/all] Error 2
make[1]: Leaving directory '/home/circleci/project/build'
make: *** [Makefile:155: all] Error 2